Revert "Fiber refactoring"
This reverts commit b360cadcf3c715bf1ed5275f56a59bfddb7329b2.